--- a/src/app/item-popup/ItemTagSelector.m.scss
+++ b/src/app/item-popup/ItemTagSelector.m.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  white-space: nowrap;
   > *:nth-child(2) {
     flex: 1;
     text-align: left;
@@ -44,9 +45,9 @@
     min-width: auto;
   }
   button .item > *:nth-child(2) {
-    display: none;
+    display: none !important;
   }
   button > *:nth-child(2) {
-    display: none;
+    display: none !important;
   }
 }
